[project]
name = "talbot-actions"
version = "0.1.0"
description = "Action extraction functionality for ticket analysis"
authors = [{name = "Sebastian Chwilczynski", email = "sebastian.chwilczynski@catonetworks.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-aws>=0.2.31",
    "pydantic>=2.11.7",
    "jinja2>=3.0.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "talbot-config",
    "talbot-parsing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/talbot"]

